frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: bootcamp
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: linker-frontend
        image: geedee231/linker-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
